--- a/.gitignore
+++ b/.gitignore
@@ -13,13 +13,16 @@ dist/
 build/
 *.log
 pnpm-debug.log*
+.pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 lerna-debug.log*
 
-# Environment variables
+# Environment variables (敏感信息，必须忽略)
 .env
+.env.*
+env
+!env.example
 .env.local
 .env.development.local
 .env.test.local
@@ -34,7 +37,9 @@ lerna-debug.log*
 .DS_Store
 
 # Docker
-docker-compose.override.yml
+# docker-compose.override.yml
+docker/backup/*.tar
+docker/backup/*.tar.gz
 
 # Database
 *.sqlite
@@ -43,15 +48,14 @@ docker-compose.override.yml
 # Logs
 logs/
 *.log
-pnpm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+packages/*/logs/
+packages/backend/logs/
+packages/frontend/logs/
 
 # OS
 .DS_Store
 Thumbs.db
+.DS_Store?
 
 # Temporary files
 *.tmp
@@ -61,4 +65,13 @@ Thumbs.db
 # Build outputs
 packages/frontend/dist/
 packages/backend/dist/
+
+# Performance reports
+lighthouse-report.json
+*.lighthouse.json
+
+# Lock files (可选，通常建议提交 pnpm-lock.yaml)
+# pnpm-lock.yaml
+# yarn.lock
+# package-lock.json
 
