--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,33 +6,37 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch app.js",
+    "dev:debug": "node --inspect --watch app.js",
     "start": "node app.js",
     "build": "echo 'No build step required'",
     "lint": "eslint . --ext .js",
-    "init-db": "node scripts/init-db.js"
+    "init-db": "node scripts/init-db.js",
+    "check-indexes": "node scripts/check-indexes.js",
+    "clean-indexes": "node scripts/clean-indexes.js",
+    "clean-all-indexes": "node scripts/clean-all-indexes.js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@blog/common": "workspace:*",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "debug": "^4.4.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "sequelize": "^6.35.0",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
     "redis": "^4.6.12",
-    "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "express-validator": "^7.0.1",
-    "winston": "^3.11.0",
+    "sequelize": "^6.35.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "@blog/common": "workspace:*"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0"
   }
 }
-
