--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -46,18 +46,16 @@ http {
         keepalive 32;
     }
 
+    upstream nuxt {
+        server nuxt:3000;
+        keepalive 32;
+    }
+
     server {
         listen 80;
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
-
-        # 静态资源缓存
-        location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            access_log off;
-        }
 
         # API 请求代理到后端
         location /api {
@@ -84,7 +82,42 @@ http {
             proxy_no_cache $request_method;
         }
 
-        # 前端路由（Vue Router）
+        # Nuxt3 静态资源（CSS、JS 等）- 使用 ^~ 阻止后续正则匹配
+        location ^~ /_nuxt/ {
+            proxy_pass http://nuxt;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            # 静态资源长期缓存
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        # 静态资源缓存（Vue SPA 的静态资源，不包括 /_nuxt/）
+        location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            access_log off;
+        }
+
+        # Nuxt3 SSR 首页（精确匹配根路径）
+        location = / {
+            proxy_pass http://nuxt;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            # SSR 页面不缓存，确保实时数据
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+        }
+
+        # 其他前端路由（Vue3 SPA）
         location / {
             try_files $uri $uri/ /index.html;
             add_header Cache-Control "no-cache, no-store, must-revalidate";
