--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 RUN apk add --no-cache curl
 
 # 新增：安装 pnpm
-RUN npm install -g pnpm@6.11.0
+RUN npm install -g pnpm@latest
 
 # 复制根目录的 workspace 配置文件
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
