--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch app.js",
+    "dev": "NODE_OPTIONS='' node --watch app.js",
     "dev:debug": "node --inspect --watch app.js",
     "start": "node app.js",
     "build": "echo 'No build step required'",
