--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -1,46 +1,165 @@
-# 前端 Dockerfile
-# 构建阶段
+# ============================================================================
+# 前端应用 Dockerfile（多阶段构建）
+#   用途：构建前端应用的 Docker 镜像
+#   策略：使用多阶段构建，第一阶段构建应用，第二阶段运行 Nginx 服务
+#   优势：最终镜像只包含运行所需的文件，体积更小，安全性更高
+#  ┌─────────────────────────────────────────────────────────────────┐
+#  │ 第一阶段：builder 阶段                                            │
+#  │ FROM node:lts-alpine AS builder                                 │
+#  │                                                                 │
+#  │ WORKDIR /app  ←─── 在 builder 镜像中                             │
+#  │ ├── 安装 pnpm                                                    │
+#  │ ├── 复制 workspace 配置文件                                       │
+#  │ ├── 创建目录结构                                                  │
+#  │ ├── 复制依赖文件                                                  │
+#  │ ├── 安装依赖（包含开发依赖）pnpm install --frozen-lockfile          │
+#  │ ├── 复制源代码                                                    │
+#  │ └── 构建应用 执行打包: pnpm run build                              │
+#  │                                                                 │
+#  │ 最终生成：builder 镜像                                            │
+#  │ (包含所有开发依赖和构建产物)                                        │
+#  └─────────────────────────────────────────────────────────────────┘
+#                ↓ (只复制构建产物)
+#  ┌───────────────────────────────────────────── ────┐
+#  │ 第二阶段：production 阶段                          │
+#  │ FROM nginx:alpine  ←─── 全新镜像                  │
+#  │                                                  │
+#  │ ├── 从 builder 复制 dist 到 /usr/share/nginx/html │
+#  │ ├── 复制 Nginx 配置文件到 /etc/nginx/nginx.conf    │
+#  │ └── 暴露端口 80                                   │
+#  │                                                  │
+#  │ 最终生成：production 镜像                          │
+#  │ (只包含静态文件和 Nginx 配置)                       │
+#  |                                                  |
+#  | 启动命令                                          |
+#  |   通过 Nginx 服务静态文件 (nginx -g daemon off;)   |
+#  └──────────────────────────────────────────────────┘
+# ============================================================================
+
+
+# 第一阶段：构建阶段（Builder Stage）: 此阶段负责安装依赖、编译源代码，生成静态资源文件
+
+# 构建阶段基础镜像
+#   使用 Node.js LTS 版本的 Alpine Linux 镜像作为构建环境
+#     Alpine 是一个轻量级 Linux 发行版，镜像体积小，安全性高
+#     lts 表示长期支持版本，稳定性更好
+#   AS builder: 为此阶段命名，后续可以通过 --from=builder 引用
 FROM node:lts-alpine AS builder
 
+# 设置构建工作目录: 在容器内创建并切换到 /app 目录
 WORKDIR /app
 
-# 安装 pnpm
-RUN npm install -g pnpm@latest
+# 安装包管理器
+# 全局安装 pnpm（Performant Node Package Manager）, pnpm 比 npm/yarn 更快，磁盘占用更少，支持 workspace 功能
+# -p 参数：如果目录已存在则不报错，支持递归创建
+RUN npm install -g pnpm@10.24.0
 
-# 复制根目录的 workspace 配置文件
+# ----------------------------------------------------------------------------
+# 复制 workspace 配置文件（依赖安装优化层）
+# ----------------------------------------------------------------------------
+# 先复制依赖管理文件，利用 Docker 层缓存机制
+# 如果依赖文件未变化，可以复用之前的安装层，加快构建速度
+# package.json: 根目录的包配置
+# pnpm-lock.yaml: 锁定依赖版本，确保构建一致性
+# pnpm-workspace.yaml: 定义 workspace 结构
+# 在 docker-compose.yml 中，frontend 服务的构建上下文设置为 `context: ..`, 即项目根目录
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 
+# ----------------------------------------------------------------------------
 # 创建 packages 目录结构
+# ----------------------------------------------------------------------------
+# 创建 monorepo 所需的目录结构 (单体仓库, 无论是前端应用、后端服务、公共组件库、工具函数，还是文档，都可以放在同一个仓库里管理)
+# packages/common: 共享代码模块
+# packages/frontend: 前端应用代码
+# -p 参数：如果目录已存在则不报错，支持递归创建
 RUN mkdir -p packages/common packages/frontend
 
-# 复制共享模块依赖
+# ----------------------------------------------------------------------------
+# 复制共享模块的依赖文件
+# ----------------------------------------------------------------------------
+# 先复制 common 模块的 package.json，用于依赖解析
+# 这样可以正确安装 workspace 内部的依赖关系
 COPY packages/common/package.json ./packages/common/
 
-# 复制前端依赖文件
+# ----------------------------------------------------------------------------
+# 复制前端模块的依赖文件
+# ----------------------------------------------------------------------------
+# 复制前端应用的 package.json
+# 先复制依赖文件，利用 Docker 层缓存优化构建速度
 COPY packages/frontend/package.json ./packages/frontend/
 
-# 安装依赖（pnpm 会自动处理 workspace）
+# ----------------------------------------------------------------------------
+# 安装所有依赖（包括开发依赖）
+# ----------------------------------------------------------------------------
+# --frozen-lockfile: 严格使用 pnpm-lock.yaml，不更新锁文件
+#                    确保构建的一致性和可重现性
+# 注意：构建阶段需要安装 devDependencies（如构建工具、编译器等）
+# pnpm 会自动识别 workspace 配置，正确处理内部包依赖
 RUN pnpm install --frozen-lockfile
 
-# 复制所有源代码
+# ----------------------------------------------------------------------------
+# 复制源代码
+# ----------------------------------------------------------------------------
+# 在依赖安装完成后再复制源代码
+# 这样代码变更不会影响依赖层的缓存，提高构建效率
+# 复制前端应用源代码
 COPY packages/frontend/ ./packages/frontend/
+# 复制共享模块源代码
 COPY packages/common/ ./packages/common/
 
-# 切换到前端目录并构建
+# ----------------------------------------------------------------------------
+# 构建前端应用
+# ----------------------------------------------------------------------------
+# 切换到前端应用目录
 WORKDIR /app/packages/frontend
+# 执行构建命令，生成静态资源文件到 dist 目录
+# 构建产物包括：HTML、CSS、JavaScript、图片等静态资源
 RUN pnpm run build
 
-# 生产阶段
+# ============================================================================
+# 第二阶段：生产阶段（Production Stage）
+# ============================================================================
+# 此阶段只包含运行所需的文件，使用轻量级的 Nginx 镜像
+# ============================================================================
+
+# ----------------------------------------------------------------------------
+# 生产阶段基础镜像
+# ----------------------------------------------------------------------------
+# 使用 Nginx Alpine 镜像作为运行环境
+# Alpine 版本体积小，只包含运行 Nginx 所需的最小依赖
 FROM nginx:alpine
 
-# 复制构建产物到 nginx
+# ----------------------------------------------------------------------------
+# 复制构建产物
+# ----------------------------------------------------------------------------
+# 从构建阶段（builder）复制构建好的静态文件
+# --from=builder: 从名为 builder 的构建阶段复制文件
+# /app/packages/frontend/dist: 构建阶段的构建产物目录
+# /usr/share/nginx/html: Nginx 默认的静态文件服务目录
 COPY --from=builder /app/packages/frontend/dist /usr/share/nginx/html
 
-# 复制 nginx 配置
+# ----------------------------------------------------------------------------
+# 复制 Nginx 配置文件
+# ----------------------------------------------------------------------------
+# 复制自定义的 Nginx 配置文件
+# 覆盖默认配置，可以自定义路由、代理、缓存等设置
 COPY docker/nginx/nginx.conf /etc/nginx/nginx.conf
 
+# ----------------------------------------------------------------------------
 # 暴露端口
+# ----------------------------------------------------------------------------
+# 声明容器运行时监听的端口
+# 80: HTTP 标准端口
+# 注意：这只是一个文档说明，实际端口映射需要在 docker run 时指定 -p 参数
 EXPOSE 80
 
-# 启动 nginx
+# ----------------------------------------------------------------------------
+# 启动 Nginx
+# ----------------------------------------------------------------------------
+# 容器启动时执行的默认命令
+# nginx: 启动 Nginx 服务器
+# -g "daemon off;": 以前台模式运行，防止容器退出
+#                   默认情况下 Nginx 会以守护进程运行，容器会立即退出
+#                   使用此参数让 Nginx 在前台运行，保持容器活跃
+# 使用 exec 格式（数组形式），避免 shell 包装，信号处理更可靠
 CMD ["nginx", "-g", "daemon off;"]
