--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,110 +1,330 @@
+# ============================================================================
+# Nginx 配置文件
+#   用途：反向代理、静态文件服务、API 代理、缓存配置
+#   架构：混合架构（Nuxt3 SSR + Vue3 SPA）
+#   功能：
+#     - 代理后端 API 请求到 Node.js 服务
+#     - 代理 Nuxt3 SSR 请求到 Nuxt 服务
+#     - 服务 Vue3 SPA 静态文件
+#     - Gzip 压缩、缓存优化、健康检查
+# ============================================================================
+
+# ----------------------------------------------------------------------------
+# 全局配置
+# ----------------------------------------------------------------------------
+
+# 运行 Nginx 的用户和组
+#   使用 nginx 用户运行，提高安全性（非 root）
 user nginx;
+
+# Worker 进程数
+#   auto: 自动设置为 CPU 核心数，充分利用多核性能
 worker_processes auto;
+
+# 错误日志配置
+#   /var/log/nginx/error.log: 错误日志文件路径
+#   warn: 只记录警告及以上级别的日志
 error_log /var/log/nginx/error.log warn;
+
+# PID 文件路径
+#   存储主进程 ID，用于进程管理
 pid /var/run/nginx.pid;
 
+# ----------------------------------------------------------------------------
+# 事件模块配置
+# ----------------------------------------------------------------------------
 events {
+    # 每个 worker 进程的最大连接数
+    #   1024: 每个进程最多处理 1024 个并发连接
+    #   总并发数 = worker_processes × worker_connections
     worker_connections 1024;
 }
 
+# ----------------------------------------------------------------------------
+# HTTP 模块配置
+# ----------------------------------------------------------------------------
 http {
+    # MIME 类型配置
+    #   包含所有标准的 MIME 类型映射（如 text/html, application/json 等）
     include /etc/nginx/mime.types;
+    
+    # 默认 MIME 类型
+    #   当无法识别文件类型时，使用 application/octet-stream（二进制流）
     default_type application/octet-stream;
 
+    # ------------------------------------------------------------------------
+    # 日志格式定义
+    # ------------------------------------------------------------------------
+    # 定义访问日志的格式，包含以下信息：
+    #   $remote_addr: 客户端 IP 地址
+    #   $remote_user: 客户端用户名（通常为空）
+    #   $time_local: 本地时间
+    #   $request: 请求行（方法、URI、协议）
+    #   $status: 响应状态码
+    #   $body_bytes_sent: 响应体大小（字节）
+    #   $http_referer: 来源页面
+    #   $http_user_agent: 用户代理（浏览器信息）
+    #   $http_x_forwarded_for: 代理链中的客户端 IP
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
+    # 访问日志配置
+    #   使用上面定义的 main 格式记录所有访问日志
     access_log /var/log/nginx/access.log main;
 
+    # ------------------------------------------------------------------------
+    # 性能优化配置
+    # ------------------------------------------------------------------------
+    
+    # 启用 sendfile
+    #   使用内核的 sendfile 系统调用，直接在内核空间传输文件，减少用户空间拷贝
+    #   提高静态文件传输效率
     sendfile on;
+    
+    # TCP_NOPUSH 选项
+    #   与 sendfile 配合使用，等待数据包填满后再发送，减少网络包数量
     tcp_nopush on;
+    
+    # TCP_NODELAY 选项
+    #   禁用 Nagle 算法，立即发送小数据包，降低延迟
+    #   适用于需要低延迟的场景（如 API 请求）
     tcp_nodelay on;
+    
+    # Keep-Alive 超时时间
+    #   65 秒：保持连接打开的时间，减少连接建立开销
     keepalive_timeout 65;
+    
+    # 类型哈希表最大大小
+    #   2048: 提高 MIME 类型查找效率
     types_hash_max_size 2048;
+    
+    # 客户端请求体最大大小
+    #   20M: 允许上传最大 20MB 的文件（如文章中的图片）
     client_max_body_size 20M;
 
+    # ------------------------------------------------------------------------
     # Gzip 压缩配置
+    # ------------------------------------------------------------------------
+    # 启用 Gzip 压缩，减少传输数据量，提高页面加载速度
+    
+    # 启用 Gzip 压缩
     gzip on;
+    
+    # 添加 Vary: Accept-Encoding 响应头
+    #   告诉缓存服务器根据 Accept-Encoding 头缓存不同版本
     gzip_vary on;
+    
+    # 代理请求的压缩策略
+    #   any: 对所有代理请求启用压缩（包括已压缩的响应）
     gzip_proxied any;
+    
+    # 压缩级别
+    #   6: 平衡压缩率和 CPU 消耗（1-9，9 压缩率最高但 CPU 消耗最大）
     gzip_comp_level 6;
+    
+    # 压缩的文件类型
+    #   只压缩文本类文件，图片和视频等二进制文件通常已经压缩过
     gzip_types text/plain text/css text/xml text/javascript 
                application/json application/javascript application/xml+rss 
                application/rss+xml font/truetype font/opentype 
                application/vnd.ms-fontobject image/svg+xml;
+    
+    # 禁用 Gzip 的浏览器
+    #   msie6: 禁用 IE6 的 Gzip（IE6 对 Gzip 支持有问题）
     gzip_disable "msie6";
+    
+    # 最小压缩长度
+    #   1000: 只压缩大于 1000 字节的文件，小文件压缩可能反而增加体积
     gzip_min_length 1000;
 
-    # 缓存配置
+    # ------------------------------------------------------------------------
+    # 代理缓存配置
+    # ------------------------------------------------------------------------
+    # 配置 API 响应的缓存存储
+    
+    # 缓存路径和参数
+    #   /var/cache/nginx: 缓存文件存储目录
+    #   levels=1:2: 目录层级结构（1 级目录，2 级子目录），提高文件系统性能
+    #   keys_zone=api_cache:10m: 定义缓存键区域，名称 api_cache，内存大小 10MB
+    #   max_size=100m: 缓存最大占用磁盘空间 100MB
+    #   inactive=60m: 60 分钟内未被访问的缓存将被删除
+    #   use_temp_path=off: 直接写入缓存目录，不经过临时目录
     proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=api_cache:10m max_size=100m 
                      inactive=60m use_temp_path=off;
 
-    # 上游服务器配置
+    # ------------------------------------------------------------------------
+    # 上游服务器配置（Upstream）
+    # ------------------------------------------------------------------------
+    # 定义后端服务，实现负载均衡和服务发现
+    
+    # 后端 API 服务配置
     upstream backend {
+        # 后端服务地址
+        #   backend:3001: Docker Compose 中的服务名，端口 3001
+        #   使用服务名而非 IP，由 Docker 网络 DNS 解析
         server backend:3001;
+        
+        # Keep-Alive 连接数
+        #   32: 保持 32 个空闲连接，减少连接建立开销
         keepalive 32;
     }
 
+    # Nuxt3 SSR 服务配置
     upstream nuxt {
+        # Nuxt3 SSR 服务地址
+        #   nuxt:3000: Docker Compose 中的服务名，端口 3000
         server nuxt:3000;
+        
+        # Keep-Alive 连接数
         keepalive 32;
     }
 
+    # ------------------------------------------------------------------------
+    # HTTP 服务器配置
+    # ------------------------------------------------------------------------
     server {
+        # 监听端口
+        #   80: HTTP 标准端口
         listen 80;
+        
+        # 服务器名称
+        #   localhost: 本地访问，生产环境应改为实际域名
         server_name localhost;
+        
+        # 网站根目录
+        #   /usr/share/nginx/html: Nginx 默认静态文件目录
+        #   存放 Vue3 SPA 的构建产物
         root /usr/share/nginx/html;
+        
+        # 默认首页文件
         index index.html;
 
-        # API 请求代理到后端
+        # --------------------------------------------------------------------
+        # 内容安全策略（CSP）头
+        # --------------------------------------------------------------------
+        # 防止 XSS 攻击，限制资源加载来源
+        #   注意：CSP 配置较严格，如果前端功能异常，可能需要调整策略
+        add_header Content-Security-Policy "
+          default-src 'self';                                    # 默认只允许同源资源
+          script-src 'self' 'unsafe-inline' 'unsafe-eval' https://unpkg.com;  # 脚本来源（允许内联和 eval，用于 Vue）
+          style-src 'self' 'unsafe-inline';                      # 样式来源（允许内联样式）
+          img-src 'self' data:;                                  # 图片来源（允许 data URI）
+          object-src 'none';                                      # 禁止插件
+          frame-src 'none';                                      # 禁止 iframe
+        " always;
+
+        # --------------------------------------------------------------------
+        # API 请求代理配置
+        # --------------------------------------------------------------------
+        # 将所有 /api 开头的请求代理到后端服务
         location /api {
+            # 代理到后端服务
+            #   http://backend: 使用上面定义的 upstream backend
             proxy_pass http://backend;
+            
+            # HTTP 版本
+            #   1.1: 使用 HTTP/1.1，支持 Keep-Alive
             proxy_http_version 1.1;
+            
+            # WebSocket 支持
+            #   如果请求包含 Upgrade 头（WebSocket），保持连接升级
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
+            
+            # 传递原始请求头
+            #   确保后端能获取到真实的客户端信息
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # 绕过缓存的场景
+            #   WebSocket 连接不缓存
             proxy_cache_bypass $http_upgrade;
             
-            # API 缓存配置
+            # -----------------------------------------------------------------
+            # API 响应缓存配置
+            # -----------------------------------------------------------------
+            # 启用代理缓存
+            #   使用上面定义的 api_cache 缓存区域
             proxy_cache api_cache;
+            
+            # 缓存有效期
+            #   200 60m: 成功响应缓存 60 分钟
+            #   404 1m: 404 错误缓存 1 分钟（避免缓存过期的 404）
             proxy_cache_valid 200 60m;
             proxy_cache_valid 404 1m;
+            
+            # 使用过期缓存的场景
+            #   当后端服务出错（5xx）或更新中时，返回过期缓存，提高可用性
             proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+            
+            # 后台更新缓存
+            #   在返回过期缓存的同时，后台更新缓存
             proxy_cache_background_update on;
+            
+            # 缓存锁定
+            #   同一请求只允许一个进程更新缓存，避免缓存击穿
             proxy_cache_lock on;
             
-            # 不缓存 POST、PUT、DELETE 请求
+            # 缓存方法限制
+            #   只缓存 GET 和 HEAD 请求，不缓存 POST、PUT、DELETE
             proxy_cache_methods GET HEAD;
+            
+            # 不缓存的请求方法
+            #   非 GET/HEAD 请求不缓存（如 POST、PUT、DELETE）
             proxy_no_cache $request_method;
         }
 
-        # Nuxt3 静态资源（CSS、JS 等）- 使用 ^~ 阻止后续正则匹配
+        # --------------------------------------------------------------------
+        # Nuxt3 静态资源代理
+        # --------------------------------------------------------------------
+        # 代理 Nuxt3 的静态资源（CSS、JS 等）
+        #   ^~ : 前缀匹配，优先级高于正则匹配，阻止后续正则匹配
         location ^~ /_nuxt/ {
+            # 代理到 Nuxt3 服务
             proxy_pass http://nuxt;
+            
+            # HTTP 版本和请求头
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
             # 静态资源长期缓存
+            #   1y: 缓存 1 年
+            #   immutable: 标记为不可变资源，浏览器可永久缓存
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
 
-        # 静态资源缓存（Vue SPA 的静态资源，不包括 /_nuxt/）
+        # --------------------------------------------------------------------
+        # Vue3 SPA 静态资源缓存
+        # --------------------------------------------------------------------
+        # 匹配静态资源文件（图片、CSS、JS、字体等）
+        #   ~* : 不区分大小写的正则匹配
         location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+            # 长期缓存
             expires 1y;
             add_header Cache-Control "public, immutable";
+            
+            # 关闭访问日志
+            #   静态资源访问量大，不记录日志减少 I/O
             access_log off;
         }
 
-        # Nuxt3 SSR 首页（精确匹配根路径）
+        # --------------------------------------------------------------------
+        # Nuxt3 SSR 首页
+        # --------------------------------------------------------------------
+        # 精确匹配根路径 "/"
+        #   = : 精确匹配，优先级最高
         location = / {
+            # 代理到 Nuxt3 SSR 服务
             proxy_pass http://nuxt;
+            
+            # HTTP 版本和 WebSocket 支持
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -113,46 +333,102 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
-            # SSR 页面不缓存，确保实时数据
+            
+            # SSR 页面不缓存
+            #   确保每次请求都获取最新内容（如文章列表、实时数据）
             add_header Cache-Control "no-cache, no-store, must-revalidate";
         }
 
-        # 其他前端路由（Vue3 SPA）
+        # --------------------------------------------------------------------
+        # Vue3 SPA 前端路由
+        # --------------------------------------------------------------------
+        # 匹配所有其他路径（Vue Router 路由）
         location / {
+            # 尝试文件匹配规则
+            #   1. 尝试 $uri（完整路径）
+            #   2. 尝试 $uri/（作为目录）
+            #   3. 回退到 /index.html（前端路由回退）
+            #   这样 Vue Router 的 history 模式可以正常工作
             try_files $uri $uri/ /index.html;
+            
+            # HTML 文件不缓存
+            #   确保前端更新后用户能看到最新版本
             add_header Cache-Control "no-cache, no-store, must-revalidate";
         }
 
-        # 健康检查
+        # --------------------------------------------------------------------
+        # 健康检查端点
+        # --------------------------------------------------------------------
+        # 用于容器健康检查和监控
         location /health {
+            # 不记录访问日志
             access_log off;
+            
+            # 直接返回 200 状态码和 "healthy" 文本
             return 200 "healthy\n";
+            
+            # 设置响应类型
             add_header Content-Type text/plain;
         }
 
-        # 错误页面
+        # --------------------------------------------------------------------
+        # 错误页面配置
+        # --------------------------------------------------------------------
+        # 404 错误：返回前端 index.html
+        #   让前端路由处理 404（如显示 NotFound 组件）
         error_page 404 /index.html;
+        
+        # 5xx 错误：返回 50x.html 错误页面
         error_page 500 502 503 504 /50x.html;
+        
+        # 50x.html 文件位置
         location = /50x.html {
             root /usr/share/nginx/html;
         }
     }
 
+    # ========================================================================
     # HTTPS 配置模板（生产环境使用）
-    # 取消注释并配置 SSL 证书后启用 HTTPS
+    # ========================================================================
+    # 以下配置已注释，生产环境需要：
+    #   1. 取消注释
+    #   2. 配置 SSL 证书路径
+    #   3. 修改 server_name 为实际域名
+    #   4. 配置证书文件（cert.pem 和 key.pem）
+    # ========================================================================
+    
+    # # HTTPS 服务器配置
     # server {
+    #     # 监听 443 端口，启用 SSL 和 HTTP/2
     #     listen 443 ssl http2;
     #     server_name your-domain.com;
     #     
+    #     # --------------------------------------------------------------------
     #     # SSL 证书配置
+    #     # --------------------------------------------------------------------
+    #     # SSL 证书文件路径（需要挂载到容器中）
     #     ssl_certificate /etc/nginx/ssl/cert.pem;
     #     ssl_certificate_key /etc/nginx/ssl/key.pem;
     #     
+    #     # --------------------------------------------------------------------
     #     # SSL 安全配置
+    #     # --------------------------------------------------------------------
+    #     # 支持的 SSL/TLS 协议版本
+    #     #   只支持 TLS 1.2 和 1.3，禁用不安全的旧版本
     #     ssl_protocols TLSv1.2 TLSv1.3;
+    #     
+    #     # SSL 加密套件
+    #     #   使用高强度加密算法，禁用不安全的算法
     #     ssl_ciphers HIGH:!aNULL:!MD5;
+    #     
+    #     # 优先使用服务器端加密套件
     #     ssl_prefer_server_ciphers on;
+    #     
+    #     # SSL 会话缓存
+    #     #   10MB 共享缓存，提高性能
     #     ssl_session_cache shared:SSL:10m;
+    #     
+    #     # SSL 会话超时时间
     #     ssl_session_timeout 10m;
     #     
     #     # 其他配置与 HTTP 服务器相同
@@ -186,10 +462,15 @@ http {
     #     }
     # }
     # 
+    # # ------------------------------------------------------------------------
     # # HTTP 重定向到 HTTPS
+    # # ------------------------------------------------------------------------
+    # # 将所有 HTTP 请求重定向到 HTTPS
     # server {
     #     listen 80;
     #     server_name your-domain.com;
+    #     
+    #     # 301 永久重定向到 HTTPS
     #     return 301 https://$server_name$request_uri;
     # }
 }
