--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blog-project",
   "version": "1.0.0",
-  "description": "个人博客系统 + 后台管理 - Monorepo 项目",
+  "description": "博客系统 + 后台管理 - Monorepo 项目",
   "private": true,
   "workspaces": [
     "packages/*"
