--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -19,11 +19,15 @@
   "dependencies": {
     "@blog/common": "workspace:*",
     "@element-plus/icons-vue": "^2.3.1",
+    "@sunny-117/text-image": "^0.0.5",
     "axios": "^1.6.5",
+    "dompurify": "^3.3.0",
     "echarts": "^5.5.0",
     "element-plus": "^2.5.4",
+    "lodash-es": "^4.17.21",
     "pinia": "^2.1.7",
     "vditor": "^3.11.2",
+    "vite-plugin-csp": "^1.1.2",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
