refactor: package.json add new script; nuxt-blog->nuxt-ssr & move it to packages[monoreop construction]

--- a/docker/nuxt/Dockerfile
+++ b/docker/nuxt/Dockerfile
@@ -28,11 +28,10 @@
 #  │ 最终生成：production 镜像                       │
 #  │ (只包含运行所需文件)                             │
 #  |                                               |
-#  | 启动命令 (在 /app/nuxt-blog)                    |
+#  | 启动命令 (在 /app/packages/nuxt-ssr)            |
 #  |   通过 Node.js 运行.output/server/index.mjs文件 |
 #  └───────────────────────────────────────────────┘
 # ============================================================================
-
 
 # 第一阶段：构建阶段（Builder Stage）: 此阶段负责安装依赖、编译源代码，生成 Nuxt3 构建产物
 
@@ -52,15 +51,15 @@ RUN npm install -g pnpm@10.24.0
 #   如果依赖文件未变化，可以复用之前的安装层，加快构建速度
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 
-# 创建 monorepo 所需的目录结构: packages/common: 共享代码模块, nuxt-blog: Nuxt3 项目目录
+# 创建 monorepo 所需的目录结构: packages/common: 共享代码模块, packages/nuxt-ssr: Nuxt3 项目目录
 # -p 参数：如果目录已存在则不报错，支持递归创建
-RUN mkdir -p packages/common nuxt-blog
+RUN mkdir -p packages/common packages/nuxt-ssr
 
 # 复制共享模块的依赖文件: 先复制 common 模块的 package.json，用于依赖解析, 这样可以正确安装 workspace 内部的依赖关系
 COPY packages/common/package.json ./packages/common/
 
-# 复制 Nuxt 项目依赖文件: 复制 nuxt-blog 的 package.json
-COPY nuxt-blog/package.json ./nuxt-blog/
+# 复制 Nuxt 项目依赖文件: 复制 packages/nuxt-ssr 的 package.json
+COPY packages/nuxt-ssr/package.json ./packages/nuxt-ssr/
 
 # 安装所有依赖（包括开发依赖）: --frozen-lockfile 严格使用 pnpm-lock.yaml，不更新锁文件, 确保构建的一致性和可重现性
 #   注意：构建阶段需要安装 devDependencies（如构建工具、编译器、Nuxt CLI 等）
@@ -69,11 +68,11 @@ RUN pnpm install --frozen-lockfile
 
 # 复制源代码: 在依赖安装完成后再复制源代码, 这样代码变更不会影响依赖层的缓存，提高构建效率
 # 复制: Nuxt3 项目源代码 + 共享模块源代码
-COPY nuxt-blog/ ./nuxt-blog/
+COPY packages/nuxt-ssr/ ./packages/nuxt-ssr/
 COPY packages/common/ ./packages/common/
 
 # 切换到 Nuxt 项目目录: 将工作目录切换到 Nuxt 项目目录, 后续构建命令将在此目录下执行
-WORKDIR /app/nuxt-blog
+WORKDIR /app/packages/nuxt-ssr
 
 # 设置构建时环境变量: ARG 用于构建时传入参数, ENV 设置运行时环境变量
 #   NUXT_PUBLIC_API_BASE_URL: Nuxt3 公共环境变量，用于配置后端 API 地址
@@ -102,14 +101,14 @@ RUN npm install -g pnpm@10.24.0
 # 复制 workspace 配置文件（依赖安装优化层）: 先复制依赖管理文件，利用 Docker 层缓存机制
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 
-# 创建 monorepo 所需的目录结构: packages/common: 共享代码模块, nuxt-blog: Nuxt3 项目目录
-RUN mkdir -p packages/common nuxt-blog
+# 创建 monorepo 所需的目录结构: packages/common: 共享代码模块, packages/nuxt-ssr: Nuxt3 项目目录
+RUN mkdir -p packages/common packages/nuxt-ssr
 
 # 复制共享模块的依赖文件: 先复制 common 模块的 package.json，用于依赖解析
 COPY packages/common/package.json ./packages/common/
 
-# 复制 Nuxt 项目依赖文件: 复制 nuxt-blog 的 package.json
-COPY nuxt-blog/package.json ./nuxt-blog/
+# 复制 Nuxt 项目依赖文件: 复制 packages/nuxt-ssr 的 package.json
+COPY packages/nuxt-ssr/package.json ./packages/nuxt-ssr/
 
 # 安装生产环境依赖: --frozen-lockfile 严格使用 pnpm-lock.yaml，不更新锁文件, 确保构建的一致性和可重现性
 #   --only=production: 只安装生产依赖（dependencies），跳过开发依赖（devDependencies）, 减小镜像体积，提高安全性
@@ -118,17 +117,17 @@ RUN pnpm install --frozen-lockfile --only=production
 
 # 从构建阶段复制构建产物: 从 builder 阶段复制 Nuxt3 构建好的 .output 目录
 #   .output 目录包含: 服务端代码、客户端静态资源、路由配置等
-COPY --from=builder /app/nuxt-blog/.output ./nuxt-blog/.output
+COPY --from=builder /app/packages/nuxt-ssr/.output ./packages/nuxt-ssr/.output
 
 # 复制必要的配置文件: 复制 Nuxt 配置文件和 package.json（运行时可能需要）
-COPY nuxt-blog/nuxt.config.ts ./nuxt-blog/
-COPY nuxt-blog/package.json ./nuxt-blog/
+COPY packages/nuxt-ssr/nuxt.config.ts ./packages/nuxt-ssr/
+COPY packages/nuxt-ssr/package.json ./packages/nuxt-ssr/
 
 # 复制共享模块源代码: 复制共享模块源代码（如果 Nuxt 应用运行时需要）
 COPY packages/common/ ./packages/common/
 
 # 切换到 Nuxt 项目目录: 将工作目录切换到 Nuxt 项目目录, 后续命令（如 CMD）将在此目录下执行
-WORKDIR /app/nuxt-blog
+WORKDIR /app/packages/nuxt-ssr
 
 # 设置运行时环境变量
 #   NODE_ENV=production: 设置为生产环境模式
@@ -149,7 +148,7 @@ EXPOSE 3000
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
   CMD node -e "require('http').get('http://localhost:3000', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
 
-# 启动命令 在 /app/nuxt-blog
+# 启动命令 在 /app/packages/nuxt-ssr
 # 容器启动时执行的默认命令: 使用 node 运行 Nuxt3 服务端入口文件(.output/server/index.mjs)
 #   这是 Nuxt3 构建后生成的服务端入口文件，用于启动 SSR 服务
 #   使用 exec 格式（数组形式），避免 shell 包装，信号处理更可靠
