feat: add csp configuration in docker/niginx/nginx.conf

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -197,22 +197,33 @@ http {
         #   存放 Vue3 SPA 的构建产物
         root /usr/share/nginx/html;
         
-        # 默认首页文件
+        # 默认首页文件, 确保 index.html 可以被正确访问
         index index.html;
 
         # --------------------------------------------------------------------
         # 内容安全策略（CSP）头
         # --------------------------------------------------------------------
         # 防止 XSS 攻击，限制资源加载来源
-        #   注意：CSP 配置较严格，如果前端功能异常，可能需要调整策略
+        #   适配 ECharts noeval 版本，无 unsafe-eval，提升安全性
         add_header Content-Security-Policy "
           default-src 'self';                                    # 默认只允许同源资源
-          script-src 'self' 'unsafe-inline' 'unsafe-eval' https://unpkg.com;  # 脚本来源（允许内联和 eval，用于 Vue）
-          style-src 'self' 'unsafe-inline';                      # 样式来源（允许内联样式）
-          img-src 'self' data:;                                  # 图片来源（允许 data URI）
+          script-src 'self';                                     # 脚本来源（不允许内联和 eval，使用 ECharts noeval 版本）
+          style-src 'self' 'unsafe-inline';                      # 样式来源（允许内联样式，ECharts 样式需要）
+          img-src 'self' data: blob:;                            # 图片来源（允许 data URI 和 blob，ECharts 图表导出需要）
+          font-src 'self' data:;                                  # 字体来源（允许 data URI）
+          connect-src 'self';                                     # 连接来源（API 请求）
           object-src 'none';                                      # 禁止插件
-          frame-src 'none';                                      # 禁止 iframe
+          base-uri 'self';                                        # 限制 base 标签的 URL
+          frame-src 'none';                                       # 禁止 iframe
         " always;
+
+        # --------------------------------------------------------------------
+        # 其他安全响应头
+        # --------------------------------------------------------------------
+        # 配套安全响应头，增强安全性
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header X-Frame-Options "DENY" always;
+        add_header X-Content-Type-Options "nosniff" always;
 
         # --------------------------------------------------------------------
         # API 请求代理配置
@@ -343,16 +354,26 @@ http {
         # Vue3 SPA 前端路由
         # --------------------------------------------------------------------
         # 匹配所有其他路径（Vue Router 路由）
+        #   注意：这个 location 必须在 location = / 之后，以确保根路径优先匹配 Nuxt
         location / {
             # 尝试文件匹配规则
             #   1. 尝试 $uri（完整路径）
             #   2. 尝试 $uri/（作为目录）
             #   3. 回退到 /index.html（前端路由回退）
             #   这样 Vue Router 的 history 模式可以正常工作
+            #   注意：最后一个参数必须是相对于 root 的路径
+            # 检查 nginx 配置中的 try_files 是否正确处理 SPA 路由。查看完整的 location 块：
             try_files $uri $uri/ /index.html;
             
             # HTML 文件不缓存
             #   确保前端更新后用户能看到最新版本
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+        }
+        
+        # 添加了 location = /index.html：确保回退到 /index.html 时能正确访问
+        #   当 try_files 回退到 /index.html 时，这个 location 确保文件能被正确返回
+        location = /index.html {
+            root /usr/share/nginx/html;
             add_header Cache-Control "no-cache, no-store, must-revalidate";
         }
 
@@ -374,9 +395,10 @@ http {
         # --------------------------------------------------------------------
         # 错误页面配置
         # --------------------------------------------------------------------
-        # 404 错误：返回前端 index.html
-        #   让前端路由处理 404（如显示 NotFound 组件）
-        error_page 404 /index.html;
+        # 移除了 error_page 404 /index.html;：try_files 已处理回退，error_page 可能造成冲突
+        # 注意：404 错误由 location / 中的 try_files 处理，不需要 error_page
+        #   如果 try_files 无法找到文件，会自动回退到 /index.html
+        #   这样 Vue Router 可以处理前端路由和 404 页面
         
         # 5xx 错误：返回 50x.html 错误页面
         error_page 500 502 503 504 /50x.html;
