--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,9 +25,9 @@
     "echarts": "^5.5.0",
     "element-plus": "^2.5.4",
     "lodash-es": "^4.17.21",
+    "md-editor-v3": "^6.2.1",
     "pinia": "^2.1.7",
     "vditor": "^3.11.2",
-    "vite-plugin-csp": "^1.1.2",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
