--- a/packages/nuxt-ssr/package.json
+++ b/packages/nuxt-ssr/package.json
@@ -21,7 +21,9 @@
     "nuxt": "^3.12.0",
     "path": "^0.12.7",
     "pinia": "^2.1.7",
-    "vditor": "^3.11.2"
+    "vditor": "^3.11.2",
+    "vue": "^3.4.0",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
