feat: 添加文章-点赞&投票子功能(包括幂等性验证) fix: MarkdownEditor-loading

--- a/docker/docker-compose copy.yml
+++ b/docker/docker-compose copy.yml
@@ -3,7 +3,7 @@
 services:
   # MySQL 数据库
   mysql:
-    image: mysql:latest
+    image: mysql:8.0
     container_name: blog-mysql
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-root123}
@@ -26,7 +26,7 @@ services:
 
   # Redis 缓存
   redis:
-    image: redis:latest
+    image: redis:8.4.0
     container_name: blog-redis
     ports:
       - "${REDIS_PORT:-6379}:6379"
