docs: add setup - 操作手册

--- a/docker/docker-compose copy.yml
+++ b/docker/docker-compose copy.yml
@@ -62,7 +62,7 @@ services:
       JWT_EXPIRES_IN: 7d
       CORS_ORIGIN: http://localhost
     ports:
-      - "${BACKEND_PORT:-3001}:3001"
+      - "${PORT:-3001}:3001"
     volumes:
       - backend_logs:/app/logs
     depends_on:
